--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,14 @@
 version: '3.8'
 services:
   java-maven-app:
-    image: "rajibmardi/my-repo:${IMAGE}"
+    image: ${IMAGE}
+    ## rajibmardi/my-repo:java-maven-1.0
     ports:
       - 8080:8080
   postgres:
-    image: postgres:13
+    image: postgres:17
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_PASSWORD:my-pwd
+      - POSTGRES_PASSWORD=my-pwd
+
